Replace limiter with dynamic range compressor
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22832 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/dansk.lang
+++ b/apps/lang/dansk.lang
@@ -12646,15 +12646,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Limiter Preamp"
+    swcodec: "Compressor"
   </source>
   <dest>
     *: none
-    swcodec: "Begrænser forforstærkning"
+    swcodec: "Compressor"
   </dest>
   <voice>
     *: none
-    swcodec: "Begrænser for-forstærkning"
+    swcodec: "Compressor"
   </voice>
 </phrase>
 <phrase>
