--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -12636,15 +12636,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Limiter Preamp"
+    swcodec: "Compressor"
   </source>
   <dest>
     *: none
-    swcodec: "Limitatore Preamp"
+    swcodec: "Compressor"
   </dest>
   <voice>
     *: none
-    swcodec: "Limitatore Preamp"
+    swcodec: "Compressor"
   </voice>
 </phrase>
 <phrase>
