--- a/apps/lang/svenska.lang
+++ b/apps/lang/svenska.lang
@@ -12637,15 +12637,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Limiter Preamp"
+    swcodec: "Compressor"
   </source>
   <dest>
     *: none
-    swcodec: "Limiter-förförstärkning"
+    swcodec: "Compressor"
   </dest>
   <voice>
     *: none
-    swcodec: "Limiter-förförstärkning"
+    swcodec: "Compressor"
   </voice>
 </phrase>
 <phrase>
