--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -12632,19 +12632,19 @@
   </voice>
 </phrase>
 <phrase>
-  id: LANG_LIMITER
+  id: LANG_COMPRESSOR
   desc: in sound settings
   user: core
   <source>
     *: none
-    swcodec: "Limiter Preamp"
+    swcodec: "Compressor"
   </source>
   <dest>
     *: none
-    swcodec: "Aschatrece Preamp"
+    swcodec: "Compressor"
   </dest>
   <voice>
     *: none
-    swcodec: "Aschatrece Preamp"
+    swcodec: "Compressor"
   </voice>
 </phrase>
