--- a/manual/platform/c200.tex
+++ b/manual/platform/c200.tex
@@ -5,6 +5,7 @@
 \edef\UseOption{\UseOption,HAVE_BACKLIGHT}
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
+\edef\UseOption{\UseOption,USB_ENABLE_HID}
 \edef\UseOption{\UseOption,sansa}
 
 \newcommand{\playerman}{Sansa}
