--- a/manual/platform/gigabeats.tex
+++ b/manual/platform/gigabeats.tex
@@ -8,6 +8,7 @@
 \edef\UseOption{\UseOption,gigabeat}
 \edef\UseOption{\UseOption,GIGABEAT_RC_PAD}
 \edef\UseOption{\UseOption,HAVEREMOTEKEYMAP}
+\edef\UseOption{\UseOption,USB_ENABLE_HID}
 
 \newcommand{\playerman}{Toshiba}
 \newcommand{\playertype}{Gigabeat S Series}
