--- a/manual/platform/keymap-gigabeats.tex
+++ b/manual/platform/keymap-gigabeats.tex
@@ -7,8 +7,8 @@
 \newcommand{\ButtonRight}{\btnfnt{Right}}
 \newcommand{\ButtonUp}{\btnfnt{Up}}
 \newcommand{\ButtonDown}{\btnfnt{Down}}
-\newcommand{\ButtonVolUp}{\btnfnt{Volume up}}
-\newcommand{\ButtonVolDown}{\btnfnt{Volume down}}
+\newcommand{\ButtonVolUp}{\btnfnt{Volume Up}}
+\newcommand{\ButtonVolDown}{\btnfnt{Volume Down}}
 \newcommand{\ButtonSelect}{\btnfnt{Select}}
 \newcommand{\ButtonPrev}{\btnfnt{Previous}}
 \newcommand{\ButtonPlay}{\btnfnt{Play}}
