--- a/manual/platform/clip.tex
+++ b/manual/platform/clip.tex
@@ -4,6 +4,7 @@
 \edef\UseOption{\UseOption,HAVE_BACKLIGHT}
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
+%\edef\UseOption{\UseOption,USB_ENABLE_HID}
 \edef\UseOption{\UseOption,sansaAMS}
 
 \newcommand{\playerman}{Sansa}
