--- a/manual/plugins/blackjack.tex
+++ b/manual/plugins/blackjack.tex
@@ -60,7 +60,7 @@ visit\\
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,IAUDIO_X5_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonSelect}
     \opt{ONDIO_PAD}{\ButtonLeft}
     \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonVolUp}
-    \opt{MR100_PAD}{\ButtonMenu}
+    \opt{MROBE100_PAD}{\ButtonMenu}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Hit (Draw new card)\\
     \opt{RECORDER_PAD}{\ButtonFTwo}
@@ -76,7 +76,7 @@ visit\\
     \opt{IAUDIO_X5_PAD}{\ButtonPlay}
     \opt{IRIVER_H10_PAD}{\ButtonRew}
     \opt{ONDIO_PAD}{\ButtonUp}
-    \opt{MR100_PAD}{\ButtonDown}
+    \opt{MROBE100_PAD}{\ButtonDown}
     \opt{IPOD_4G_PAD,IPOD_3G_PAD,SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonLeft}
        \opt{HAVEREMOTEKEYMAP}{& }
     & Double down\\
