--- a/manual/platform/mrobe100.tex
+++ b/manual/platform/mrobe100.tex
@@ -5,6 +5,7 @@
 \edef\UseOption{\UseOption,HAVE_BACKLIGHT}
 \edef\UseOption{\UseOption,HAVE_DISK_STORAGE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
+\edef\UseOption{\UseOption,USB_ENABLE_HID}
 \edef\UseOption{\UseOption,olympus}
 
 \newcommand{\playerman}{Olympus}
