Since we have usb_hid in feature.txt we don't need a seperate UseOption in the platform file for the manual (thanks for pixelma for noticing)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22858 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -182,7 +182,7 @@ this option \setting{On}. If it is not required, then turning this setting
       Changes the brightness of the button lights.
   }
 }
-\opt{USB_ENABLE_HID}{
+\opt{usb_hid}{
   \subsection{USB keypad Mode}
     This setting control the keypad mode when the \dap{} is attached to a
     computer through USB. The \dap{} registers itself as a USB keyboard (in
@@ -253,7 +253,6 @@ this option \setting{On}. If it is not required, then turning this setting
                 ,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
                 ,MROBE100_PAD}
               {\ButtonLeft / \ButtonRight}
-            \opt{SANSA_E200_PAD}{\ButtonMenu}
             \opt{HAVEREMOTEKEYMAP}{
               &
               \opt{GIGABEAT_RC_PAD}{\ButtonRCRew / \ButtonRCFF}%
